tmp/pytest.log

==================================== ERRORS ====================================
__________________ ERROR collecting tests/test_ab_compare.py ___________________
.venv/lib/python3.11/site-packages/_pytest/python.py:498: in importtestmodule
    mod = import_path(
.venv/lib/python3.11/site-packages/_pytest/pathlib.py:587: in import_path
    importlib.import_module(module_name)
/opt/homebrew/Cellar/python@3.11/3.11.13_1/Frameworks/Python.framework/Versions/3.11/lib/python3.11/importlib/__init__.py:126: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
<frozen importlib._bootstrap>:1204: in _gcd_import
    ???
<frozen importlib._bootstrap>:1176: in _find_and_load
    ???
<frozen importlib._bootstrap>:1147: in _find_and_load_unlocked
    ???
<frozen importlib._bootstrap>:690: in _load_unlocked
    ???
.venv/lib/python3.11/site-packages/_pytest/assertion/rewrite.py:186: in exec_module
    exec(co, module.__dict__)
tests/test_ab_compare.py:7: in <module>
    from adhash.hashmap_cli import APP_CONFIG, run_ab_compare
src/adhash/hashmap_cli.py:41: in <module>
    _TARGET = _import_target()
              ^^^^^^^^^^^^^^^^
src/adhash/hashmap_cli.py:14: in _import_target
    return import_module("adhash.cli.app")
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
/opt/homebrew/Cellar/python@3.11/3.11.13_1/Frameworks/Python.framework/Versions/3.11/lib/python3.11/importlib/__init__.py:126: in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
src/adhash/cli/__init__.py:3: in <module>
    from . import app as _app
E     File "/Users/jguida941/Dev/GitHubProject/AdaptiveHashMapCli/src/adhash/cli/app.py", line 489
E       rng = random.Random(seed)  # nosec B311 - deterministic workload sampler
E   IndentationError: unexpected indent
=========================== short test summary info ============================
ERROR tests/test_ab_compare.py
!!!!!!!!!!!!!!!!!!!!!!!!!! stopping after 1 failures !!!!!!!!!!!!!!!!!!!!!!!!!!!
3 warnings, 1 error in 0.10s
